pretalx hook
